crates/pina_codama_renderer/src/snapshots/pina_codama_renderer__tests__writes_scaffold_with_bytemuck_dependency.snap
---
source: crates/pina_codama_renderer/src/__tests.rs
expression: cargo_toml
---
[package]
name = "hello-solana-client"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
bytemuck = { workspace = true, default-features = true }
num-derive = { workspace = true, default-features = true }
num-traits = { workspace = true, default-features = true }
pina_pod_primitives = { workspace = true }
solana-account-info = { workspace = true, default-features = true }
solana-cpi = { workspace = true, default-features = true }
solana-instruction = { workspace = true, default-features = true }
solana-program-error = { workspace = true, default-features = true }
solana-pubkey = { workspace = true, default-features = true }
thiserror = { workspace = true, default-features = true }
